--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
   "name": "lowcode-ui-form",
-  "version": "0.0.4",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --mode dev",
+    "dev-yc": "vite --mode yc",
     "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "@vitejs/plugin-vue": "^4.5.0",
+    "axios": "^1.6.2",
     "element-plus": "^2.4.3",
     "nanoid": "^5.0.4",
+    "vant": "^4.8.0",
     "vite": "^5.0.0",
     "vue": "^3.3.8",
     "vuedraggable": "^4.1.0"
-  }
+  },
+  "files": [
+    "src"
+  ]
 }
