--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@element-plus/icons-vue": "^2.3.1",
     "@vitejs/plugin-vue": "^4.5.0",
     "axios": "^1.6.2",
+    "echarts": "^5.4.3",
     "element-plus": "^2.4.3",
     "nanoid": "^5.0.4",
     "vant": "^4.8.0",
     "vite": "^5.0.0",
     "vue": "^3.3.8",
+    "vue-grid-layout": "^3.0.0-beta1",
+    "vue-router": "^4.2.5",
     "vuedraggable": "^4.1.0"
   },
   "files": [
